src/pretalx/static/common/css/public.css
/*
 * SPDX-FileCopyrightText: 2017-present Tobias Kunze
 * SPDX-License-Identifier: Apache-2.0
 */

body {
  background: var(--color-grey-lightest);
  --color-header-text: var(--color-text-on-primary, white);
}

#top-bg {
  background-color: var(--color-primary);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 240px;
  z-index: -1;
  display: flex;

  :has(#header-image) {
    --color-header-text: white;
  }

  #header-image {
    object-fit: cover;
    width: 100%;
  }
}

header {
  z-index: 1000;
  height: 180px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  word-break: normal;

  #event-logo {
    max-height: 140px;
  }

  h1 a {
    color: var(--color-header-text);

    &:hover {
      color: var(--color-header-text);
      text-decoration: none;
    }
  }

  .header-wrapper {
    width: 100%;
    max-width: calc(100vw - 8px);
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    word-break: break-word;
  }
  #header-tabs {
    display: flex;
    flex-wrap: wrap;
    z-index: 400;
    background: var(--color-bg);
    border-radius: var(--size-border-radius) var(--size-border-radius) 0 0;
    margin-bottom: -4px;
    padding-bottom: 4px;
    a.header-tab {
      padding: 8px 16px 4px 16px;
      border-bottom: 2px solid transparent;
      &:hover {
        text-decoration: none;
        border-bottom: 2px dotted var(--color-primary);
      }
      &.active {
        border-bottom: 2px solid var(--color-primary);
      }
    }
  }
  .header-row-right {
    padding-bottom: 4px;
    color: var(--color-header-text);
    margin-left: auto;
    display: flex;
    flex-wrap: wrap;

    a {
      color: var(--color-header-text);
    }

    a + a {
      margin-left: 0.3em;
    }

    .locales a:hover {
      border-bottom: 1px dashed var(--color-header-text);
      text-decoration: none;
    }

    .locales a.active {
      border-bottom: 1px solid var(--color-header-text);
    }
  }
}

#main-card {
  min-height: 300px;
  box-shadow: 0 5px 10px rgb(0 0 0 / 0.2);
  padding: 0;
  border: none;

  main {
    padding: var(--size-spacer);
  }
}

footer {
  padding: 20px 0;
  text-align: center;
  font-size: 11px;
  max-width: calc(100vw - 12px);
  position: sticky;
  left: 0;

  img {
    max-height: 50px;
  }
}

#main-container {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
  max-width: 1140px;
}

#event-nonpublic {
  background: var(--color-danger);
  padding: 5px 20px;
  color: white;
  text-align: center;

  a {
    color: white;
    font-weight: bold;
  }
}

.heading-with-buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
  & > :last-child {
    margin-left: auto;
  }
  #fav-button {
    color: rgb(255, 160, 0);
    padding: 0;
    width: 30px;
    height: 30px;
    border-radius: 100%;
    font-size: 20px;
    background-color: var(--color-grey-lightest);
    display: inline-flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    i.fa-star::before {
      filter: drop-shadow(0 0 2px rgb(0 0 0 / 0.17));
    }
  }
}

.btn-sm .fa:not(:only-child) {
  padding-right: 5px;
}

@media (max-width: 1200px) {
  header {
    text-align: right;
    flex-direction: column;
  }
}
@media (max-width: 992px) {
  #main-container {
    max-width: 960px;
  }
}

@media (max-width: 768px) {
  #main-container {
    max-width: 720px;
    header .header-wrapper {
      flex-direction: column-reverse;
      align-items: flex-start;
    }
  }
}

@media (max-width: 576px) {
  #main-container {
    padding: 0;
    padding-top: 20px;
    width: 100%;

    main {
      width: 100%;
      padding: 16px;
    }

    header {
      padding: 0;
      #event-logo {
        max-height: 120px;
      }
    }

    .user-row {
      flex-direction: column;
    }

    .btn-success {
      width: 100%;
    }

    .col-form-label {
      text-align: left;
      display: flex;

      span {
        padding-left: 4px;
      }
    }
    .orga-edit-link {
      max-height: 40px;
    }

    #user-dropdown {
      right: 0;
    }

    .table td.text-right {
      display: flex;
      flex-direction: row;
      margin-left: auto;

      > * {
        margin-left: 4px;
      }
    }

    .formset {
      padding-bottom: 16px;
      display: flex;
      flex-direction: column;

      .resource-option-fields {
        display: flex;
        flex-direction: column;
        border-bottom: 2px var(--color-grey-lighter) solid;
        margin-bottom: 8px;
      }

      .btn-info {
        width: 100%;
      }
    }
  }
}

@media print {
  header,
  footer {
    display: none;
  }
  .container {
    max-width: 100%;
  }
}

